--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,25 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
+<% adapter = ENV.fetch("DB_ADAPTER", "mysql") %>
+mysql_default: &mysql_default
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  username: root
+  password: password
   pool: 5
-  timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<: *<%= adapter %>_default
+  database: database_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  <<: *<%= adapter %>_default
+  database: database_test
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  <<: *<%= adapter %>_default
+  database: database_production
+  username: username
+  password:
